parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AS
    ASYN
    AWAY
    BREAK
    CONTINUE
    ELSE
    FOR
    FROM
    IF
    PUNTO_COMA
    RCOM
    RETURN
    STATIC
    WHILE

Grammar

Rule 0     S' -> cuerpo
Rule 1     cuerpo -> asignacion
Rule 2     cuerpo -> operaciones
Rule 3     cuerpo -> comparaciones
Rule 4     cuerpo -> definir_funcion
<<<<<<< HEAD
Rule 5     cuerpo -> llamada_a_metodo
Rule 6     cuerpo -> enum
Rule 7     cuerpo -> print
Rule 8     cuerpo -> library_call
Rule 9     asignacion -> declaracion ID DOUBLE_POINT VEC_OBJ LESS tipo_de_dato GREAT EQUAL VEC MACRO LCORCH tupla_valores RCORCH
Rule 10    asignacion -> declaracion ID EQUAL VEC MACRO LCORCH tupla_valores RCORCH
Rule 11    asignacion -> declaracion ID EQUAL VEC TURBO_FISH NEW LPAREN RPAREN
Rule 12    asignacion -> declaracion ID EQUAL VEC MACRO LCORCH RCORCH
Rule 13    asignacion -> declaracion ID EQUAL valor
Rule 14    asignacion -> declaracion ID DOUBLE_POINT TIPO_INT EQUAL NUMBER
Rule 15    asignacion -> declaracion ID DOUBLE_POINT TIPO_CHAR EQUAL CHAR
Rule 16    asignacion -> declaracion ID DOUBLE_POINT TIPO_STRING EQUAL STRING
Rule 17    asignacion -> declaracion ID EQUAL tipo_de_dato TURBO_FISH NEW LPAREN RPAREN
Rule 18    asignacion -> declaracion DOUBLE_POINT tupla_asignacion EQUAL tupla_declaracion
Rule 19    asignacion -> declaracion ID EQUAL tupla_declaracion
=======
Rule 5     cuerpo -> print
Rule 6     cuerpo -> library_call
Rule 7     asignacion -> LET ID DOUBLE_POINT VEC_OBJ LESS tipo_de_dato GREAT EQUAL VEC MACRO LCORCH tupla_valores RCORCH
Rule 8     asignacion -> LET ID EQUAL VEC MACRO LCORCH tupla_valores RCORCH
Rule 9     asignacion -> LET ID EQUAL VEC TURBO_FISH NEW LPAREN RPAREN
Rule 10    asignacion -> LET ID EQUAL VEC MACRO LCORCH RCORCH
Rule 11    asignacion -> LET ID EQUAL valor
Rule 12    asignacion -> LET MUT ID EQUAL valor
Rule 13    asignacion -> CONST ID EQUAL valor
Rule 14    asignacion -> LET ID DOUBLE_POINT TIPO_INT EQUAL NUMBER
Rule 15    asignacion -> LET ID DOUBLE_POINT TIPO_CHAR EQUAL CHAR
Rule 16    asignacion -> LET ID DOUBLE_POINT TIPO_STRING EQUAL STRING
Rule 17    asignacion -> LET MUT ID EQUAL tipo_de_dato TURBO_FISH NEW LPAREN RPAREN
Rule 18    asignacion -> LET ID DOUBLE_POINT tupla_asignacion EQUAL tupla_declaracion
Rule 19    asignacion -> LET ID EQUAL tupla_declaracion
>>>>>>> 95730653e416b1c232b0228add024a64841366b7
Rule 20    tupla_asignacion -> LPAREN tupla_lista_de_datos RPAREN
Rule 21    declaracion -> LET
Rule 22    declaracion -> LET MUT
Rule 23    declaracion -> CONST
Rule 24    tupla_declaracion -> LPAREN tupla_valores RPAREN
Rule 25    tupla_lista_de_datos -> tipo_de_dato
Rule 26    tupla_lista_de_datos -> tipo_de_dato COMA tupla_lista_de_datos
Rule 27    tupla_valores -> valor
Rule 28    tupla_valores -> valor COMA tupla_valores
Rule 29    operaciones -> suma
Rule 30    operaciones -> resta
Rule 31    operaciones -> multiplicacion
Rule 32    operaciones -> division
Rule 33    suma -> valor_numerico PLUS valor_numerico
Rule 34    suma -> suma PLUS valor_numerico
Rule 35    resta -> valor_numerico MINUS valor_numerico
Rule 36    resta -> resta MINUS valor_numerico
Rule 37    multiplicacion -> valor_numerico TIMES valor_numerico
Rule 38    multiplicacion -> multiplicacion TIMES valor_numerico
Rule 39    division -> valor_numerico DIVIDE valor_numerico
Rule 40    comparaciones -> menor
Rule 41    comparaciones -> menor_igual
Rule 42    comparaciones -> mayor
Rule 43    comparaciones -> mayor_igual
Rule 44    comparaciones -> igual
Rule 45    menor -> valor_numerico LESS valor_numerico
Rule 46    menor_igual -> valor_numerico LESS EQUAL valor_numerico
Rule 47    mayor -> valor_numerico GREAT valor_numerico
Rule 48    mayor_igual -> valor_numerico GREAT EQUAL valor_numerico
Rule 49    igual -> valor_numerico EQUAL EQUAL valor_numerico
Rule 50    definir_funcion -> funcion_main
Rule 51    definir_funcion -> funcion
Rule 52    funcion_main -> FN MAIN LPAREN RPAREN
Rule 53    funcion -> FN ID LPAREN RPAREN
Rule 54    funcion -> FN ID LPAREN lista_parametros RPAREN
Rule 55    lista_parametros -> ID DOUBLE_POINT tipo_de_dato
Rule 56    lista_parametros -> ID DOUBLE_POINT tipo_de_dato COMA lista_parametros
Rule 57    llamada_a_metodo -> ID PUNTO metodo
Rule 58    llamada_a_metodo -> ID PUNTO NUMBER
Rule 59    metodo -> pop_method
Rule 60    metodo -> push_method
Rule 61    pop_method -> POP LPAREN RPAREN
Rule 62    pop_method -> POP LPAREN NUMBER RPAREN
Rule 63    push_method -> PUSH LPAREN RPAREN
Rule 64    push_method -> PUSH LPAREN NUMBER RPAREN
Rule 65    enum -> ENUM ID LLLAV lista_enum RLLAV
Rule 66    lista_enum -> lista_enum_id
Rule 67    lista_enum -> lista_enum_id_tipo
Rule 68    lista_enum -> lista_enum_tipo
Rule 69    lista_enum_id -> ID
Rule 70    lista_enum_id -> ID COMA lista_enum_id
Rule 71    lista_enum_id_tipo -> ID DOUBLE_POINT tipo_de_dato
Rule 72    lista_enum_id_tipo -> ID DOUBLE_POINT tipo_de_dato lista_enum_id_tipo
Rule 73    lista_enum_tipo -> tipo_de_dato
Rule 74    lista_enum_tipo -> tipo_de_dato COMA lista_enum_tipo
Rule 75    tipo_de_dato -> TIPO_STRING
Rule 76    tipo_de_dato -> TIPO_BOOL
Rule 77    tipo_de_dato -> TIPO_CHAR
Rule 78    tipo_de_dato -> TIPO_INT
Rule 79    valor -> valor_numerico
Rule 80    valor -> STRING
Rule 81    valor -> CHAR
Rule 82    valor -> BOOL
Rule 83    valor_numerico -> FLOAT
Rule 84    valor_numerico -> NUMBER
Rule 85    print -> PRINTLN MACRO LPAREN valor RPAREN
Rule 86    print -> PRINTLN LPAREN NUMBER RPAREN
Rule 87    library_call -> USE library_path
Rule 88    library_path -> ID
Rule 89    library_path -> ID TURBO_FISH library_path

Terminals, with rules where they appear

AS                   : 
ASYN                 : 
AWAY                 : 
BOOL                 : 82
BREAK                : 
CHAR                 : 15 81
COMA                 : 26 28 56 70 74
CONST                : 23
CONTINUE             : 
DIVIDE               : 39
DOUBLE_POINT         : 9 14 15 16 18 55 56 71 72
ELSE                 : 
ENUM                 : 65
EQUAL                : 9 10 11 12 13 14 15 16 17 18 19 46 48 49 49
FLOAT                : 83
FN                   : 52 53 54
FOR                  : 
FROM                 : 
GREAT                : 9 47 48
ID                   : 9 10 11 12 13 14 15 16 17 19 53 54 55 56 57 58 65 69 70 71 72 88 89
IF                   : 
LCORCH               : 9 10 12
LESS                 : 9 45 46
LET                  : 21 22
LLLAV                : 65
LPAREN               : 11 17 20 24 52 53 54 61 62 63 64 85 86
MACRO                : 9 10 12 85
MAIN                 : 52
MINUS                : 35 36
MUT                  : 22
NEW                  : 11 17
NUMBER               : 14 58 62 64 84 86
PLUS                 : 33 34
POP                  : 61 62
PRINTLN              : 85 86
PUNTO                : 57 58
PUNTO_COMA           : 
PUSH                 : 63 64
RCOM                 : 
RCORCH               : 9 10 12
RETURN               : 
RLLAV                : 65
RPAREN               : 11 17 20 24 52 53 54 61 62 63 64 85 86
STATIC               : 
STRING               : 16 80
TIMES                : 37 38
TIPO_BOOL            : 76
TIPO_CHAR            : 15 77
TIPO_INT             : 14 78
TIPO_STRING          : 16 75
TURBO_FISH           : 11 17 89
USE                  : 87
VEC                  : 9 10 11 12
VEC_OBJ              : 9
WHILE                : 
error                : 

Nonterminals, with rules where they appear

asignacion           : 1
comparaciones        : 3
cuerpo               : 0
declaracion          : 9 10 11 12 13 14 15 16 17 18 19
definir_funcion      : 4
division             : 32
enum                 : 6
funcion              : 51
funcion_main         : 50
igual                : 44
library_call         : 8
library_path         : 87 89
lista_enum           : 65
lista_enum_id        : 66 70
lista_enum_id_tipo   : 67 72
lista_enum_tipo      : 68 74
lista_parametros     : 54 56
llamada_a_metodo     : 5
mayor                : 42
mayor_igual          : 43
menor                : 40
menor_igual          : 41
metodo               : 57
multiplicacion       : 31 38
operaciones          : 2
pop_method           : 59
print                : 7
push_method          : 60
resta                : 30 36
suma                 : 29 34
tipo_de_dato         : 9 17 25 26 55 56 71 72 73 74
tupla_asignacion     : 18
tupla_declaracion    : 18 19
tupla_lista_de_datos : 20 26
tupla_valores        : 9 10 24 28
valor                : 13 27 28 85
valor_numerico       : 33 33 34 35 35 36 37 37 38 39 39 45 45 46 46 47 47 48 48 49 49 79

Parsing method: LALR

state 0

    (0) S' -> . cuerpo
    (1) cuerpo -> . asignacion
    (2) cuerpo -> . operaciones
    (3) cuerpo -> . comparaciones
    (4) cuerpo -> . definir_funcion
<<<<<<< HEAD
    (5) cuerpo -> . llamada_a_metodo
    (6) cuerpo -> . enum
    (7) cuerpo -> . print
    (8) cuerpo -> . library_call
    (9) asignacion -> . declaracion ID DOUBLE_POINT VEC_OBJ LESS tipo_de_dato GREAT EQUAL VEC MACRO LCORCH tupla_valores RCORCH
    (10) asignacion -> . declaracion ID EQUAL VEC MACRO LCORCH tupla_valores RCORCH
    (11) asignacion -> . declaracion ID EQUAL VEC TURBO_FISH NEW LPAREN RPAREN
    (12) asignacion -> . declaracion ID EQUAL VEC MACRO LCORCH RCORCH
    (13) asignacion -> . declaracion ID EQUAL valor
    (14) asignacion -> . declaracion ID DOUBLE_POINT TIPO_INT EQUAL NUMBER
    (15) asignacion -> . declaracion ID DOUBLE_POINT TIPO_CHAR EQUAL CHAR
    (16) asignacion -> . declaracion ID DOUBLE_POINT TIPO_STRING EQUAL STRING
    (17) asignacion -> . declaracion ID EQUAL tipo_de_dato TURBO_FISH NEW LPAREN RPAREN
    (18) asignacion -> . declaracion DOUBLE_POINT tupla_asignacion EQUAL tupla_declaracion
    (19) asignacion -> . declaracion ID EQUAL tupla_declaracion
    (29) operaciones -> . suma
    (30) operaciones -> . resta
    (31) operaciones -> . multiplicacion
    (32) operaciones -> . division
    (40) comparaciones -> . menor
    (41) comparaciones -> . menor_igual
    (42) comparaciones -> . mayor
    (43) comparaciones -> . mayor_igual
    (44) comparaciones -> . igual
    (50) definir_funcion -> . funcion_main
    (51) definir_funcion -> . funcion
    (57) llamada_a_metodo -> . ID PUNTO metodo
    (58) llamada_a_metodo -> . ID PUNTO NUMBER
    (65) enum -> . ENUM ID LLLAV lista_enum RLLAV
    (85) print -> . PRINTLN MACRO LPAREN valor RPAREN
    (86) print -> . PRINTLN LPAREN NUMBER RPAREN
    (87) library_call -> . USE library_path
    (21) declaracion -> . LET
    (22) declaracion -> . LET MUT
    (23) declaracion -> . CONST
    (33) suma -> . valor_numerico PLUS valor_numerico
    (34) suma -> . suma PLUS valor_numerico
    (35) resta -> . valor_numerico MINUS valor_numerico
    (36) resta -> . resta MINUS valor_numerico
    (37) multiplicacion -> . valor_numerico TIMES valor_numerico
    (38) multiplicacion -> . multiplicacion TIMES valor_numerico
    (39) division -> . valor_numerico DIVIDE valor_numerico
    (45) menor -> . valor_numerico LESS valor_numerico
    (46) menor_igual -> . valor_numerico LESS EQUAL valor_numerico
    (47) mayor -> . valor_numerico GREAT valor_numerico
    (48) mayor_igual -> . valor_numerico GREAT EQUAL valor_numerico
    (49) igual -> . valor_numerico EQUAL EQUAL valor_numerico
    (52) funcion_main -> . FN MAIN LPAREN RPAREN
    (53) funcion -> . FN ID LPAREN RPAREN
    (54) funcion -> . FN ID LPAREN lista_parametros RPAREN
    (83) valor_numerico -> . FLOAT
    (84) valor_numerico -> . NUMBER
=======
    (5) cuerpo -> . print
    (6) cuerpo -> . library_call
    (7) asignacion -> . LET ID DOUBLE_POINT VEC_OBJ LESS tipo_de_dato GREAT EQUAL VEC MACRO LCORCH tupla_valores RCORCH
    (8) asignacion -> . LET ID EQUAL VEC MACRO LCORCH tupla_valores RCORCH
    (9) asignacion -> . LET ID EQUAL VEC TURBO_FISH NEW LPAREN RPAREN
    (10) asignacion -> . LET ID EQUAL VEC MACRO LCORCH RCORCH
    (11) asignacion -> . LET ID EQUAL valor
    (12) asignacion -> . LET MUT ID EQUAL valor
    (13) asignacion -> . CONST ID EQUAL valor
    (14) asignacion -> . LET ID DOUBLE_POINT TIPO_INT EQUAL NUMBER
    (15) asignacion -> . LET ID DOUBLE_POINT TIPO_CHAR EQUAL CHAR
    (16) asignacion -> . LET ID DOUBLE_POINT TIPO_STRING EQUAL STRING
    (17) asignacion -> . LET MUT ID EQUAL tipo_de_dato TURBO_FISH NEW LPAREN RPAREN
    (18) asignacion -> . LET ID DOUBLE_POINT tupla_asignacion EQUAL tupla_declaracion
    (19) asignacion -> . LET ID EQUAL tupla_declaracion
    (33) operaciones -> . suma
    (34) operaciones -> . resta
    (35) operaciones -> . multiplicacion
    (36) operaciones -> . division
    (44) comparaciones -> . menor
    (45) comparaciones -> . menor_igual
    (46) comparaciones -> . mayor
    (47) comparaciones -> . mayor_igual
    (48) comparaciones -> . igual
    (26) definir_funcion -> . funcion_main
    (27) definir_funcion -> . funcion
    (64) print -> . PRINTLN MACRO LPAREN valor RPAREN
    (65) print -> . PRINTLN LPAREN NUMBER RPAREN
    (66) library_call -> . USE library_path
    (37) suma -> . valor_numerico PLUS valor_numerico
    (38) suma -> . suma PLUS valor_numerico
    (39) resta -> . valor_numerico MINUS valor_numerico
    (40) resta -> . resta MINUS valor_numerico
    (41) multiplicacion -> . valor_numerico TIMES valor_numerico
    (42) multiplicacion -> . multiplicacion TIMES valor_numerico
    (43) division -> . valor_numerico DIVIDE valor_numerico
    (49) menor -> . valor_numerico LESS valor_numerico
    (50) menor_igual -> . valor_numerico LESS EQUAL valor_numerico
    (51) mayor -> . valor_numerico GREAT valor_numerico
    (52) mayor_igual -> . valor_numerico GREAT EQUAL valor_numerico
    (53) igual -> . valor_numerico EQUAL EQUAL valor_numerico
    (28) funcion_main -> . FN MAIN LPAREN RPAREN
    (29) funcion -> . FN ID LPAREN RPAREN
    (30) funcion -> . FN ID LPAREN lista_parametros RPAREN
    (62) valor_numerico -> . FLOAT
    (63) valor_numerico -> . NUMBER
>>>>>>> 95730653e416b1c232b0228add024a64841366b7

    ID              shift and go to state 11
    ENUM            shift and go to state 24
    PRINTLN         shift and go to state 25
    USE             shift and go to state 26
    LET             shift and go to state 27
    CONST           shift and go to state 28
    FN              shift and go to state 30
    FLOAT           shift and go to state 31
    NUMBER          shift and go to state 12

    cuerpo                         shift and go to state 1
    asignacion                     shift and go to state 2
    operaciones                    shift and go to state 3
    comparaciones                  shift and go to state 4
    definir_funcion                shift and go to state 5
    llamada_a_metodo               shift and go to state 6
    enum                           shift and go to state 7
    print                          shift and go to state 8
    library_call                   shift and go to state 9
    declaracion                    shift and go to state 10
    suma                           shift and go to state 13
    resta                          shift and go to state 14
    multiplicacion                 shift and go to state 15
    division                       shift and go to state 16
    menor                          shift and go to state 17
    menor_igual                    shift and go to state 18
    mayor                          shift and go to state 19
    mayor_igual                    shift and go to state 20
    igual                          shift and go to state 21
    funcion_main                   shift and go to state 22
    funcion                        shift and go to state 23
    valor_numerico                 shift and go to state 29

state 1

    (0) S' -> cuerpo .



state 2

    (1) cuerpo -> asignacion .

    $end            reduce using rule 1 (cuerpo -> asignacion .)


state 3

    (2) cuerpo -> operaciones .

    $end            reduce using rule 2 (cuerpo -> operaciones .)


state 4

    (3) cuerpo -> comparaciones .

    $end            reduce using rule 3 (cuerpo -> comparaciones .)


state 5

    (4) cuerpo -> definir_funcion .

    $end            reduce using rule 4 (cuerpo -> definir_funcion .)


state 6

    (5) cuerpo -> llamada_a_metodo .

    $end            reduce using rule 5 (cuerpo -> llamada_a_metodo .)


state 7

    (6) cuerpo -> enum .

    $end            reduce using rule 6 (cuerpo -> enum .)


state 8

<<<<<<< HEAD
    (7) cuerpo -> print .
=======
    (7) asignacion -> LET . ID DOUBLE_POINT VEC_OBJ LESS tipo_de_dato GREAT EQUAL VEC MACRO LCORCH tupla_valores RCORCH
    (8) asignacion -> LET . ID EQUAL VEC MACRO LCORCH tupla_valores RCORCH
    (9) asignacion -> LET . ID EQUAL VEC TURBO_FISH NEW LPAREN RPAREN
    (10) asignacion -> LET . ID EQUAL VEC MACRO LCORCH RCORCH
    (11) asignacion -> LET . ID EQUAL valor
    (12) asignacion -> LET . MUT ID EQUAL valor
    (14) asignacion -> LET . ID DOUBLE_POINT TIPO_INT EQUAL NUMBER
    (15) asignacion -> LET . ID DOUBLE_POINT TIPO_CHAR EQUAL CHAR
    (16) asignacion -> LET . ID DOUBLE_POINT TIPO_STRING EQUAL STRING
    (17) asignacion -> LET . MUT ID EQUAL tipo_de_dato TURBO_FISH NEW LPAREN RPAREN
    (18) asignacion -> LET . ID DOUBLE_POINT tupla_asignacion EQUAL tupla_declaracion
    (19) asignacion -> LET . ID EQUAL tupla_declaracion
>>>>>>> 95730653e416b1c232b0228add024a64841366b7

    $end            reduce using rule 7 (cuerpo -> print .)


state 9

    (8) cuerpo -> library_call .

    $end            reduce using rule 8 (cuerpo -> library_call .)


state 10

    (9) asignacion -> declaracion . ID DOUBLE_POINT VEC_OBJ LESS tipo_de_dato GREAT EQUAL VEC MACRO LCORCH tupla_valores RCORCH
    (10) asignacion -> declaracion . ID EQUAL VEC MACRO LCORCH tupla_valores RCORCH
    (11) asignacion -> declaracion . ID EQUAL VEC TURBO_FISH NEW LPAREN RPAREN
    (12) asignacion -> declaracion . ID EQUAL VEC MACRO LCORCH RCORCH
    (13) asignacion -> declaracion . ID EQUAL valor
    (14) asignacion -> declaracion . ID DOUBLE_POINT TIPO_INT EQUAL NUMBER
    (15) asignacion -> declaracion . ID DOUBLE_POINT TIPO_CHAR EQUAL CHAR
    (16) asignacion -> declaracion . ID DOUBLE_POINT TIPO_STRING EQUAL STRING
    (17) asignacion -> declaracion . ID EQUAL tipo_de_dato TURBO_FISH NEW LPAREN RPAREN
    (18) asignacion -> declaracion . DOUBLE_POINT tupla_asignacion EQUAL tupla_declaracion
    (19) asignacion -> declaracion . ID EQUAL tupla_declaracion

<<<<<<< HEAD
    ID              shift and go to state 32
    DOUBLE_POINT    shift and go to state 33
=======
    PLUS            reduce using rule 63 (valor_numerico -> NUMBER .)
    MINUS           reduce using rule 63 (valor_numerico -> NUMBER .)
    TIMES           reduce using rule 63 (valor_numerico -> NUMBER .)
    DIVIDE          reduce using rule 63 (valor_numerico -> NUMBER .)
    LESS            reduce using rule 63 (valor_numerico -> NUMBER .)
    GREAT           reduce using rule 63 (valor_numerico -> NUMBER .)
    EQUAL           reduce using rule 63 (valor_numerico -> NUMBER .)
    $end            reduce using rule 63 (valor_numerico -> NUMBER .)
    RPAREN          reduce using rule 63 (valor_numerico -> NUMBER .)
    COMA            reduce using rule 63 (valor_numerico -> NUMBER .)
    RCORCH          reduce using rule 63 (valor_numerico -> NUMBER .)
>>>>>>> 95730653e416b1c232b0228add024a64841366b7


state 11

    (57) llamada_a_metodo -> ID . PUNTO metodo
    (58) llamada_a_metodo -> ID . PUNTO NUMBER

    PUNTO           shift and go to state 34


state 12

    (84) valor_numerico -> NUMBER .

    PLUS            reduce using rule 84 (valor_numerico -> NUMBER .)
    MINUS           reduce using rule 84 (valor_numerico -> NUMBER .)
    TIMES           reduce using rule 84 (valor_numerico -> NUMBER .)
    DIVIDE          reduce using rule 84 (valor_numerico -> NUMBER .)
    LESS            reduce using rule 84 (valor_numerico -> NUMBER .)
    GREAT           reduce using rule 84 (valor_numerico -> NUMBER .)
    EQUAL           reduce using rule 84 (valor_numerico -> NUMBER .)
    $end            reduce using rule 84 (valor_numerico -> NUMBER .)
    RPAREN          reduce using rule 84 (valor_numerico -> NUMBER .)
    COMA            reduce using rule 84 (valor_numerico -> NUMBER .)
    RCORCH          reduce using rule 84 (valor_numerico -> NUMBER .)


state 13

    (29) operaciones -> suma .
    (34) suma -> suma . PLUS valor_numerico

    $end            reduce using rule 29 (operaciones -> suma .)
    PLUS            shift and go to state 35


state 14

    (30) operaciones -> resta .
    (36) resta -> resta . MINUS valor_numerico

    $end            reduce using rule 30 (operaciones -> resta .)
    MINUS           shift and go to state 36


state 15

    (31) operaciones -> multiplicacion .
    (38) multiplicacion -> multiplicacion . TIMES valor_numerico

    $end            reduce using rule 31 (operaciones -> multiplicacion .)
    TIMES           shift and go to state 37


state 16

    (32) operaciones -> division .

    $end            reduce using rule 32 (operaciones -> division .)


state 17

    (40) comparaciones -> menor .

    $end            reduce using rule 40 (comparaciones -> menor .)


state 18

    (41) comparaciones -> menor_igual .

    $end            reduce using rule 41 (comparaciones -> menor_igual .)


state 19

    (42) comparaciones -> mayor .

    $end            reduce using rule 42 (comparaciones -> mayor .)


state 20

    (43) comparaciones -> mayor_igual .

    $end            reduce using rule 43 (comparaciones -> mayor_igual .)


state 21

    (44) comparaciones -> igual .

    $end            reduce using rule 44 (comparaciones -> igual .)


state 22

    (50) definir_funcion -> funcion_main .

    $end            reduce using rule 50 (definir_funcion -> funcion_main .)


state 23

    (51) definir_funcion -> funcion .

    $end            reduce using rule 51 (definir_funcion -> funcion .)


state 24

    (65) enum -> ENUM . ID LLLAV lista_enum RLLAV

    ID              shift and go to state 38


state 25

    (85) print -> PRINTLN . MACRO LPAREN valor RPAREN
    (86) print -> PRINTLN . LPAREN NUMBER RPAREN

    MACRO           shift and go to state 39
    LPAREN          shift and go to state 40


state 26

    (87) library_call -> USE . library_path
    (88) library_path -> . ID
    (89) library_path -> . ID TURBO_FISH library_path

<<<<<<< HEAD
    ID              shift and go to state 42
=======
    PLUS            reduce using rule 62 (valor_numerico -> FLOAT .)
    MINUS           reduce using rule 62 (valor_numerico -> FLOAT .)
    TIMES           reduce using rule 62 (valor_numerico -> FLOAT .)
    DIVIDE          reduce using rule 62 (valor_numerico -> FLOAT .)
    LESS            reduce using rule 62 (valor_numerico -> FLOAT .)
    GREAT           reduce using rule 62 (valor_numerico -> FLOAT .)
    EQUAL           reduce using rule 62 (valor_numerico -> FLOAT .)
    $end            reduce using rule 62 (valor_numerico -> FLOAT .)
    RPAREN          reduce using rule 62 (valor_numerico -> FLOAT .)
    COMA            reduce using rule 62 (valor_numerico -> FLOAT .)
    RCORCH          reduce using rule 62 (valor_numerico -> FLOAT .)
>>>>>>> 95730653e416b1c232b0228add024a64841366b7

    library_path                   shift and go to state 41

state 27

<<<<<<< HEAD
    (21) declaracion -> LET .
    (22) declaracion -> LET . MUT
=======
    (7) asignacion -> LET ID . DOUBLE_POINT VEC_OBJ LESS tipo_de_dato GREAT EQUAL VEC MACRO LCORCH tupla_valores RCORCH
    (8) asignacion -> LET ID . EQUAL VEC MACRO LCORCH tupla_valores RCORCH
    (9) asignacion -> LET ID . EQUAL VEC TURBO_FISH NEW LPAREN RPAREN
    (10) asignacion -> LET ID . EQUAL VEC MACRO LCORCH RCORCH
    (11) asignacion -> LET ID . EQUAL valor
    (14) asignacion -> LET ID . DOUBLE_POINT TIPO_INT EQUAL NUMBER
    (15) asignacion -> LET ID . DOUBLE_POINT TIPO_CHAR EQUAL CHAR
    (16) asignacion -> LET ID . DOUBLE_POINT TIPO_STRING EQUAL STRING
    (18) asignacion -> LET ID . DOUBLE_POINT tupla_asignacion EQUAL tupla_declaracion
    (19) asignacion -> LET ID . EQUAL tupla_declaracion
>>>>>>> 95730653e416b1c232b0228add024a64841366b7

    ID              reduce using rule 21 (declaracion -> LET .)
    DOUBLE_POINT    reduce using rule 21 (declaracion -> LET .)
    MUT             shift and go to state 43


state 28

    (23) declaracion -> CONST .

    ID              reduce using rule 23 (declaracion -> CONST .)
    DOUBLE_POINT    reduce using rule 23 (declaracion -> CONST .)


state 29

    (33) suma -> valor_numerico . PLUS valor_numerico
    (35) resta -> valor_numerico . MINUS valor_numerico
    (37) multiplicacion -> valor_numerico . TIMES valor_numerico
    (39) division -> valor_numerico . DIVIDE valor_numerico
    (45) menor -> valor_numerico . LESS valor_numerico
    (46) menor_igual -> valor_numerico . LESS EQUAL valor_numerico
    (47) mayor -> valor_numerico . GREAT valor_numerico
    (48) mayor_igual -> valor_numerico . GREAT EQUAL valor_numerico
    (49) igual -> valor_numerico . EQUAL EQUAL valor_numerico

    PLUS            shift and go to state 44
    MINUS           shift and go to state 45
    TIMES           shift and go to state 46
    DIVIDE          shift and go to state 47
    LESS            shift and go to state 48
    GREAT           shift and go to state 50
    EQUAL           shift and go to state 49


state 30

    (52) funcion_main -> FN . MAIN LPAREN RPAREN
    (53) funcion -> FN . ID LPAREN RPAREN
    (54) funcion -> FN . ID LPAREN lista_parametros RPAREN

    MAIN            shift and go to state 51
    ID              shift and go to state 52


state 31

    (83) valor_numerico -> FLOAT .

    PLUS            reduce using rule 83 (valor_numerico -> FLOAT .)
    MINUS           reduce using rule 83 (valor_numerico -> FLOAT .)
    TIMES           reduce using rule 83 (valor_numerico -> FLOAT .)
    DIVIDE          reduce using rule 83 (valor_numerico -> FLOAT .)
    LESS            reduce using rule 83 (valor_numerico -> FLOAT .)
    GREAT           reduce using rule 83 (valor_numerico -> FLOAT .)
    EQUAL           reduce using rule 83 (valor_numerico -> FLOAT .)
    $end            reduce using rule 83 (valor_numerico -> FLOAT .)
    RPAREN          reduce using rule 83 (valor_numerico -> FLOAT .)
    COMA            reduce using rule 83 (valor_numerico -> FLOAT .)
    RCORCH          reduce using rule 83 (valor_numerico -> FLOAT .)


state 32

    (9) asignacion -> declaracion ID . DOUBLE_POINT VEC_OBJ LESS tipo_de_dato GREAT EQUAL VEC MACRO LCORCH tupla_valores RCORCH
    (10) asignacion -> declaracion ID . EQUAL VEC MACRO LCORCH tupla_valores RCORCH
    (11) asignacion -> declaracion ID . EQUAL VEC TURBO_FISH NEW LPAREN RPAREN
    (12) asignacion -> declaracion ID . EQUAL VEC MACRO LCORCH RCORCH
    (13) asignacion -> declaracion ID . EQUAL valor
    (14) asignacion -> declaracion ID . DOUBLE_POINT TIPO_INT EQUAL NUMBER
    (15) asignacion -> declaracion ID . DOUBLE_POINT TIPO_CHAR EQUAL CHAR
    (16) asignacion -> declaracion ID . DOUBLE_POINT TIPO_STRING EQUAL STRING
    (17) asignacion -> declaracion ID . EQUAL tipo_de_dato TURBO_FISH NEW LPAREN RPAREN
    (19) asignacion -> declaracion ID . EQUAL tupla_declaracion

    DOUBLE_POINT    shift and go to state 53
    EQUAL           shift and go to state 54


state 33

    (18) asignacion -> declaracion DOUBLE_POINT . tupla_asignacion EQUAL tupla_declaracion
    (20) tupla_asignacion -> . LPAREN tupla_lista_de_datos RPAREN

    LPAREN          shift and go to state 56

    tupla_asignacion               shift and go to state 55

state 34

    (57) llamada_a_metodo -> ID PUNTO . metodo
    (58) llamada_a_metodo -> ID PUNTO . NUMBER
    (59) metodo -> . pop_method
    (60) metodo -> . push_method
    (61) pop_method -> . POP LPAREN RPAREN
    (62) pop_method -> . POP LPAREN NUMBER RPAREN
    (63) push_method -> . PUSH LPAREN RPAREN
    (64) push_method -> . PUSH LPAREN NUMBER RPAREN

    NUMBER          shift and go to state 58
    POP             shift and go to state 61
    PUSH            shift and go to state 62

    metodo                         shift and go to state 57
    pop_method                     shift and go to state 59
    push_method                    shift and go to state 60

state 35

    (34) suma -> suma PLUS . valor_numerico
    (83) valor_numerico -> . FLOAT
    (84) valor_numerico -> . NUMBER

    FLOAT           shift and go to state 31
    NUMBER          shift and go to state 12

    valor_numerico                 shift and go to state 63

state 36

    (36) resta -> resta MINUS . valor_numerico
    (83) valor_numerico -> . FLOAT
    (84) valor_numerico -> . NUMBER

    FLOAT           shift and go to state 31
    NUMBER          shift and go to state 12

    valor_numerico                 shift and go to state 64

state 37

    (38) multiplicacion -> multiplicacion TIMES . valor_numerico
    (83) valor_numerico -> . FLOAT
    (84) valor_numerico -> . NUMBER

    FLOAT           shift and go to state 31
    NUMBER          shift and go to state 12

    valor_numerico                 shift and go to state 65

state 38

    (65) enum -> ENUM ID . LLLAV lista_enum RLLAV

    LLLAV           shift and go to state 66


state 39

    (85) print -> PRINTLN MACRO . LPAREN valor RPAREN

    LPAREN          shift and go to state 67


state 40

    (86) print -> PRINTLN LPAREN . NUMBER RPAREN

    NUMBER          shift and go to state 68


state 41

    (87) library_call -> USE library_path .

    $end            reduce using rule 87 (library_call -> USE library_path .)


state 42

    (88) library_path -> ID .
    (89) library_path -> ID . TURBO_FISH library_path

    $end            reduce using rule 88 (library_path -> ID .)
    TURBO_FISH      shift and go to state 69


state 43

    (22) declaracion -> LET MUT .

    ID              reduce using rule 22 (declaracion -> LET MUT .)
    DOUBLE_POINT    reduce using rule 22 (declaracion -> LET MUT .)


state 44

    (33) suma -> valor_numerico PLUS . valor_numerico
    (83) valor_numerico -> . FLOAT
    (84) valor_numerico -> . NUMBER

    FLOAT           shift and go to state 31
    NUMBER          shift and go to state 12

    valor_numerico                 shift and go to state 70

state 45

    (35) resta -> valor_numerico MINUS . valor_numerico
    (83) valor_numerico -> . FLOAT
    (84) valor_numerico -> . NUMBER

    FLOAT           shift and go to state 31
    NUMBER          shift and go to state 12

    valor_numerico                 shift and go to state 71

state 46
